# Gpt_Bot

./: .env  pyproject.toml
src/discord_api/: discord_client.py
src/openai_api/: openapi_connector.py
